--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "react-native/split-platform-components": 2,
     "react-native/no-inline-styles": 0,
     "react-native/no-color-literals": 0,
-    "react-native/no-raw-text": 2,
+    "react-native/no-raw-text": [2, { "skip": ["Button"] }],
     "react/prop-types": "off",
     "no-global-assign": "error",
     "arrow-body-style": "error",
