--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.1",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
